# RepoExec

./: LICENSE  README.md  requirements
bigcode-eval-repoexec/: main.py
bigcode-eval-repoexec/lm_eval/: arguments.py  base.py  generation.py
bigcode-eval-repoexec/scripts/: clean_generation.py  generate_config.yaml  generation.sh
code_eval/: Dockerfile  get_score.py  passk.py  utils.py
code_eval/scripts/: execute.sh  passk.sh  process_rs.sh
data_with_test_case/test-apps+PySnooper/: pass_data.jsonl
data_with_test_case/test-apps+apimd/: pass_data.jsonl
data_with_test_case/test-apps+black+src/: failed_data.jsonl  pass_data.jsonl
data_with_test_case/test-apps+cookiecutter/: failed_data.jsonl  pass_data.jsonl
data_with_test_case/test-apps+dataclasses-json/: pass_data.jsonl
data_with_test_case/test-apps+docstring_parser/: failed_data.jsonl  pass_data.jsonl
data_with_test_case/test-apps+fastapi/: pass_data.jsonl
data_with_test_case/test-apps+flutes/: pass_data.jsonl
data_with_test_case/test-apps+flutils/: failed_data.jsonl  pass_data.jsonl
execution-code-eval/: Dockerfile  api_llms_generate.py  evaluate_functional_correctness.sh  execute.py  get_dir.py  get_score.py  passk.py  process_result.py  utils.py
test-apps/: all_potential_modules.csv  good_modules.csv  questionable_modules.csv
test-apps/apimd/: .coverage  .travis.yml  LICENSE  README.md  a-api.md  package.txt  setup.cfg
test-apps/apimd/apimd/: __init__.py  __main__.py  loader.py  logger.py  parser.py  pep585.py
test-apps/apimd/docs/: a-api.md  apimd-api.md
(+6182 files in other folders)
