[metadata]
name = apimd
version = attr: apimd.__version__
description = A Python API compiler for universal Markdown syntax.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Markdown, API
license = MIT
author = Yuan Chang
author_email = pyslvs@gmail.com
url = https://github.com/KmolYuan/apimd
classifiers =
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Utilities
    Environment :: Console
    Operating System :: OS Independent
    Typing :: Typed

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    colorlog

[options.package_data]
apimd = py.typed

[options.entry_points]
console_scripts =
    apimd=apimd.__main__:main

[mypy]
pretty = True
show_error_codes = True
show_column_numbers = True
ignore_missing_imports = True
allow_redefinition = True
warn_redundant_casts = True
warn_unreachable = True
strict_equality = True
